# almost_stl

./: CMakeLists.txt  README.md
include/almost/: vector.h
include/almost/buts/: vector_impl.h
src/: vector.cpp
tests/: CMakeLists.txt  DuckTest.h  almost_tests.cpp  test_vector.cpp
